--- a/Project.html
+++ b/Project.html
@@ -8,7 +8,18 @@
         <script src="https://d3js.org/d3.v5.min.js"></script>
  	</head>
 	<body>
-        <!-- <div id="chartContainer"></div> -->
+        <div id="chartContainer"></div>
+		
+
+		<div class="toolTip">
+		  <span class="year"></span><br>
+		  <span class="oilCons"></span><br>
+		  <span class="coalCons"></span><br>
+		  <span class="gasCons"></span><br>
+		  <span class="hydroCons"></span><br>
+		  <span class="solarCons"></span><br>
+		  <span class="windCons"></span><br>
+		</div>
 	
 		<!--link to the js file-->
 		<script src="./dataVis.js"></script>
